# PingAppWin

./: .gitignore  ConsoleTab.py  MainWindow.py  NetworkScanTab.py  PingTab.py  PingWorker.py  TODO.txt  ip_address_tools.py  main.py  ping_tools.py  pyproject.toml
Application/use_cases/: ping_table.py
ConsoleTab/: ConsoleTab.py
NetworkScanTab/: NetworkScanTab.py
PingTab/: PingTab.py
Workers/: AsyncPingWorker.py
application/: __init__.py
application/services/: __init__.py  console_line_type.py  console_output_classifier.py  console_output_markers.py  ping_result_analyzer.py  ping_result_markers.py
application/use_cases/: __init__.py  async_ping_table.py  console_ping.py  network_scan_use_case.py  ping_table.py
domain/: __init__.py
domain/entities/: __init__.py  ip_address.py  ip_range.py  ip_range_set.py
domain/services/: __init__.py  ping_rules.py
domain/value_objects/: __init__.py  ping_result_status.py  ping_status.py
infrastructure/: __init__.py
infrastructure/ping/: __init__.py  async_ping_executor.py  console_ping_executor.py  ping_executor.py
presentation/qt/: __init__.py  app.py  main_window.py
presentation/qt/mappers/: __init__.py  console_line_mapper.py  ping_status_mapper.py
presentation/qt/presenters/: __init__.py  console_presenter.py  network_scan_presenter.py  ping_presenter.py
tests/: adresses.py  ip_address_tools_test.py  ping_tools_test.py
tests/Workers/: test_async_ping_worker.py
tests/domain/: test_ip_address.py  test_ip_range.py  test_ip_range_set.py  test_ping_result_status.py  test_ping_rules.py
(+40 files in other folders)
