[project]
name = "myping-test"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"


dependencies = [
    "pyside6 (>=6.10.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test*.py","test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-vv -s --tb=long -l"

[tool.poetry]
name = "myping-test"
version = "0.1.0"
package-mode = true